# nelix

./: .gitignore  Makefile  TASK_COMPLETE_REPORT.md  __init__.py  after-install.md  generation_supervisor.py  launcher.py  launcher_resolve.py  nelix.example.toml  nelix.toml.example  nelix_cli.py  nelix_cursor.py  paths.py  plugin.yaml  pyproject.toml  registry.py  release.py  requirements-daemon.in  requirements.txt  rpc_client.py  runtime.py  supervisor.py  wake.py
.githooks/: pre-commit
.github/workflows/: test.yml
bootstrap/: __main__.py  cli.py  install.py
daemon/: app.py  belief.py  broker_client.py  broker_proto.py  capture.py  clock.py  config.py  dialog.py  env_resolver.py  errors.py  events.py  fingerprints.py  generation.py  hook_settings.py  hooks.py  hygiene.py  lease_client.py  lifecycle_log.py  manager.py  messages.py  model_cache.py  model_discovery.py  obs.py  observation.py  owner.py  protocol.py  pty_broker.py  pty_session.py  reaper.py  rpc_server.py  session.py  singleton.py  transcript_builder.py  transport.py
daemon/drivers/: __init__.py  base.py  claude.py
daemon/launchers/: __init__.py  base.py  local.py
daemon/renderer/: base.py  ghostty.py  shim.wasm
daemon/tools/: __init__.py  note.py  question.py
docs/: business-requirements.md  hermes-plugin-references.md  product-specification.md
docs/reports/: 2026-07-17-immutable-versioned-runtime.md  2026-07-17-make-the-core-installable.md  2026-07-17-nelix-home.md
docs/specs/: hook-prompt-kind-collision-brief.md  hook-prompt-kind-collision.md
harness/: skeleton_drive.py
nelix_cli/: __init__.py  __main__.py  cli.py  config_cmds.py  daemon_cmds.py  doorbell.py  envelope.py  launcher_cmds.py  rpc.py  toml_emit.py  wait_cmd.py
plugin/: __init__.py  rpc_client.py  wake.py
plugin/skills/nelix-orchestration/: SKILL.md
router/: app.py  board.py  forwarding.py  leases.py  operator.py  reconcile_current.py  registry.py  restart.py  runtime_dir.py  server.py  session_forward.py  start.py  wait.py  waiters.py
skills/nelix-orchestration/: SKILL.md
spikes/: spike_b_pty_pyte.py  spike_c_client.sh  spike_c_rpc_server.py  spike_d_transcript_capture.py  teardown_race_repro.py  transcript_capture_result.md
spikes/vt-ghostty/: README.md  build.sh  compare.py  harness.py  shim.c
spikes/wakeup/: __init__.py  plugin.yaml  waiter.sh
tests/: _replay.py  _router_fakes.py  _session_replay.py  conftest.py  hang_watchdog_plugin.py  plugin_loader.py  test_app.py  test_app_broker_boot.py  test_async_delivery_realcapture.py  test_async_ingress_logging.py  test_async_message_e2e_realcapture.py  test_async_question.py  test_belief_engine.py  test_belief_hooks.py  test_belief_sequences.py  test_bg_subagent_realcapture.py  test_bootstrap_fetch.py  test_bootstrap_install.py  test_bootstrap_lock.py  test_bootstrap_pyz.py  test_broker_client.py  test_broker_proto.py  test_capture.py  test_capture_timed.py  test_claude_driver.py  test_claude_driver_mask.py  test_cli_config.py  test_cli_doorbell.py  test_cli_envelope.py  test_cli_launcher.py  test_cli_rpc_read.py  test_cli_rpc_write.py  test_clock.py  test_concurrency_cap.py  test_concurrent_spawn_hazard.py  test_config.py  test_contracts_cursor.py  test_contracts_errors.py  test_contracts_ids.py  test_contracts_records.py  (+149 more)
tests/golden/: INVENTORY.md  MIGRATION.md  README.md  _harness.py  invariants.py
tests/golden/claude/_hooks/: askq_collision.jsonl  bash_gate.jsonl  bg_subagent.jsonl  done_idle.jsonl  modal_ask.jsonl
tests/golden/claude/_regression/: 3p1_alt_screen.raw  s-039a61b4-bg-subagent.raw  s-039a61b4.raw  s-2190cfb2-remint.raw  s-639b6474-phantom-blocked.raw  s-9610d25c-askuserquestion-collision.capture  s-9610d25c-askuserquestion-collision.hooks.jsonl  s-9610d25c-askuserquestion-collision.raw  s-b8a30317-delivery.raw  s-beb967e9.capture
tests/golden/claude/background/: bg-subagent.txt  bg-subagent.yaml
tests/golden/claude/delivery/: nbsp-paste.txt  nbsp-paste.yaml
tests/golden/claude/idle_prompt/: bare-prompt.txt  bare-prompt.yaml  empty-prompt.txt  free-text-footer.txt  free-text-footer.yaml  trap-output-ends-with-ellipsis.txt  trap-scrollback-thinking.txt
tests/golden/claude/permission_prompt/: edit-menu.txt  edit-menu.yaml  run-command-menu.txt  trust-dialog.txt  trust-dialog.yaml
tests/golden/claude/working/: bash-panel.txt  bash-panel.yaml  ctrl-b-panel.txt  ctrl-b-panel.yaml  spinner-counter.txt  spinner-glyph-variant.txt  spinner-middot.txt  spinner-startup.txt  spinner.txt  spinner.yaml
tests/tools/: owner_mutation_sweep.py
tools/: hang_watchdog.py
