# setuptools, not hatchling: packages/nelix_contracts and packages/nelix_store already build with
# setuptools>=68 + setuptools.build_meta. One build system in one repo; nothing here needs anything
# hatchling does better.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nelix-core"
version = "0.1.0"
description = "The nelix core: the PTY daemon, its VT renderer and the executor-facing hook CLIs."
requires-python = "==3.11.*"

# MEASURED, not inherited from requirements.txt (2026-07-17, AST walk over every import under
# daemon/): the ONLY third-party module daemon/ imports is wasmtime, in renderer/ghostty.py.
#   - ptyprocess is NOT imported anywhere under daemon/ — the PTY is stdlib os.openpty +
#     os.login_tty (daemon/pty_broker.py:109,57). requirements.txt and supervisor.py:71's
#     _DAEMON_MODULES both call it a daemon import; that is stale. supervisor.py is out of scope
#     here (nelix-3rm owns it), so its list is left alone — but the INSTALL does not repeat it.
#   - pyyaml is NOT imported anywhere under daemon/ either; only bin/nelix-doctor imports it, and
#     nelix-doctor does not ship (see [project.scripts]). It is a tooling dep, not a runtime one.
# wasmtime is a native wheel; pin it exactly. requirements-runtime.lock is COMPILED from this list
# and adds the hashes every installed generation is frozen from (tests/test_runtime_lock.py fails if
# the two disagree), so this line is the single place the runtime closure is declared.
dependencies = ["wasmtime==45.0.0"]

[project.optional-dependencies]
# Not installed by the core. pyyaml is here because bin/nelix-doctor (a repo tool, not a shipped
# one) imports it. nelix_store and nelix_contracts are local packages that ship as separate
# wheels alongside the core via the runtime installer (nelix-9a4.4).
dev = ["pytest==8.3.4", "pyyaml==6.0.3"]

# The `nelix` CLI is the single entry point every adapter invokes — through the stable launcher,
# but the console script is what the launcher execs into. nelix-question and nelix-note are the
# two WORKER-facing CLIs: daemon/hook_settings.py hands their absolute paths to every hook-capable
# executor, so an install without them is a broken core — they are the daemon's own runtime
# requirement, not a convenience.
#
# nelix-doctor / nelix-reap / nelix-wait / nelix-capture / nelix-inventory deliberately do NOT ship.
# They are operator tools, and the `nelix` CLI replaces their surface.
[project.scripts]
nelix = "nelix_cli.cli:main"
nelix-question = "daemon.tools.question:main"
nelix-note = "daemon.tools.note:main"

[tool.setuptools]
# TOP-LEVEL modules the shipped packages import. paths + launcher_resolve were always required;
# router/ adds generation_supervisor and rpc_client, and nelix_cli adds runtime. All five are
# stdlib-only (verified by tests/test_runtime_closure.py for the builder half). supervisor.py is
# deliberately absent: nothing shipped imports it.
py-modules = ["launcher", "paths", "launcher_resolve", "rpc_client", "runtime", "generation_supervisor"]

[tool.setuptools.packages.find]
where = ["."]
include = ["daemon*", "router*", "nelix_cli*"]

[tool.setuptools.package-data]
# The only non-.py file under daemon/, and ghostty.py:7 loads it relative to its own __file__.
# Miss it and the install imports fine, then dies the first time it renders.
"daemon.renderer" = ["shim.wasm"]

[tool.pytest.ini_options]
addopts = "-n auto --dist=loadscope"

# A WEDGED run is silent by construction, and that silence is the whole reason the 96% hang has
# never been diagnosed. `-n auto` buffers each worker's output and prints it when the run ends; a
# run that never ends prints nothing at all — no traceback, no summary, no name of the test that
# stopped. Both venues that have hit this (the root container and a clean Linux runner) produced
# an identical wall of dots and then nothing.
#
# faulthandler_timeout is the one instrument that speaks DURING a hang: pytest arms
# faulthandler.dump_traceback_later, so a test still running after this many seconds dumps the
# stacks of ALL its threads straight to stderr — unbuffered, before any hang can swallow it. It
# only dumps; it does not kill the test, so a genuinely slow test costs noise rather than a
# failure. 300s is chosen above the honestly-slow tests (`slow` builds a wheel and a venv with uv)
# and far below the CI job cap, so the dump lands with minutes to spare.
faulthandler_timeout = 300

markers = [
    "slow: builds a wheel and a venv; seconds, not milliseconds (tests/test_real_wheel.py)",
]

[tool.ruff.lint]
# Real-bug rules ONLY, not style: F = pyflakes (undefined names, unused imports/vars, empty
# f-strings), E9 = syntax/IO errors. These catch mistakes, not formatting opinions, so the
# pre-commit gate (.githooks/pre-commit) can block on them without flooding an unformatted tree.
# Widen deliberately, not by accident.
select = ["F", "E9"]
